# snakeSFML

./: CMakeLists.txt  main.cpp
